objects/LAO_QualitySnapshots__c.object
<CustomObject>
    <description>Created to track reporting on Laser Approval Process</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Rejected_By__c</fullName>
        <label>Approved/Rejected By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Made_By__c</fullName>
        <label>Change Made By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAO__c</fullName>
        <label>LAO</label>
        <referenceTo>Laser_Artwork_Order__c</referenceTo>
        <relationshipLabel>LAO QualitySnapshots</relationshipLabel>
        <relationshipName>LAO_QualitySnapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LAO QualitySnapshots</label>
    <nameField>
        <displayFormat>LQS-{00000}</displayFormat>
        <label>LAO QualitySnapshots ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAO QualitySnapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>